added color and background color

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-#body {
-  background-color: #C9A2D2
-  color: #5B2C06
-}
-
-#form_box {
-  background-color: #EFF8F3
+body {
+  background-color: #C9A2D2;
+  color: #5B2C06;
 }
