changed the color and added a div around the form body

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 body {
-  background-color: #C9A2D2;
-  color: #5B2C06;
+  background-color: #F3BAC3;
+  color: #163D57;
   font-size: 10em;
+}
+
+#title {
+
+}
+
+#form_body {
+  background-color: #EBDDEE; 
 }
