added padding to each label field

--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,17 @@ body {
 }
 
 #first_name_field {
-
+  padding: .5em;
 }
 
 #last_name_field {
-
+  padding: .5em;
 }
 
 #email_field {
-
+  padding: .5em;
 }
 
 #phone_field {
-
+  padding: .5em;
 }
