centered the form body and title

--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,15 @@ body {
 }
 
 #title {
-  margin: auto;
+  margin-left: 50%;
+  margin-right: 50%;
   padding: .5em;
 }
 
 #form_body {
   background-color: #EBDDEE;
+  margin-left: 50%;
+  margin-right: 50%;
   padding: .5em;
 }
 
