--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,63 @@ input[type=submit] {
   margin: .5em;
   margin-left: 37%;
 }
+
+@media only screen and (min-width: 1100px) {
+  body {
+    font-size: 1em;
+  }
+  #title {
+    padding: .5em .5em .2em .5em;
+    margin: .5em;
+    margin-left: 25em;
+    font-size: 1.5em;
+    font-family: 'Modak', cursive;
+  }
+
+  #form_body {
+    background-color: #EBDDEE;
+  }
+
+  #first_name_field {
+    padding: .5em;
+  }
+
+  #last_name_field {
+    padding: .5em;
+  }
+
+  #email_field {
+    padding: .5em;
+  }
+
+  #phone_field {
+    padding: .5em;
+  }
+
+  input[type=text] {
+    width: 90%;
+    border-radius: .5em;
+    border: solid #163D57;
+  }
+
+  input[type=email] {
+    width: 90%;
+    border-radius: .5em;
+    border: solid #163D57;
+  }
+
+  input[type=number] {
+    width: 90%;
+    border-radius: .5em;
+    border: solid #163D57;
+  }
+
+  input[type=submit] {
+    background-color: #EBDDEE;
+    border-radius: .5em;
+    border: solid #163D57;
+    padding: .3em;
+    margin: .5em;
+    margin-left: 41em;
+  }
+}
