--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,10 @@ input[type=submit] {
   margin-left: 37%;
 }
 
-@media only screen and (min-width: 1100px) {
+@media  only screen and (min-width: 1100px) {  /* tablet */
+
+}
+@media only screen and (min-width: 1300px) { /* computer  screen */
   body {
     font-size: 1em;
   }
