--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 #title {
   padding: .5em .5em .2em .5em;
-  margin: .5em;
+  margin: .5em .5em .2em .5em;
   font-size: 1.5em;
   font-family: 'Modak', cursive;
 }
@@ -17,18 +17,22 @@ body {
 
 #first_name_field {
   padding: .5em;
+  margin-left: 2%;
 }
 
 #last_name_field {
   padding: .5em;
+  margin-left: 2%;
 }
 
 #email_field {
   padding: .5em;
+  margin-left: 2%;
 }
 
 #phone_field {
   padding: .5em;
+  margin-left: 2%;
 }
 
 input[type=text] {
@@ -55,16 +59,27 @@ input[type=submit] {
   border: solid #163D57;
   padding: .3em;
   margin: .5em;
-  margin-left: 37%;
+  margin-left: 8%;
+  width: 80%;
 }
 
-@media  only screen and (min-width: 1100px) {  /* tablet */
+@media  only screen and (min-width: 1000px) {  /* tablet */
+  body {
+    font-size: 2.5em;
+  }
 
-}
+  #title {
+    font-size: 1.5em;
+  }
+
+  input[type=submit] {
+
+  }
 @media only screen and (min-width: 1300px) { /* computer  screen */
   body {
     font-size: 1em;
   }
+
   #title {
     padding: .5em .5em .2em .5em;
     margin: .5em;
