hid the pictures on mobile and table views

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,14 @@ input[type=submit] {
   width: 80%;
 }
 
+#imgleft {
+  display: none;
+}
+
+#imgright {
+  display: none;
+}
+
 @media  only screen and (min-width: 1000px) {  /* tablet */
   body {
     font-size: 2.5em;
@@ -76,6 +84,15 @@ input[type=submit] {
   input[type=submit] {
     margin-left: 1.8em;
   }
+
+  #imgleft {
+    display: none;
+  }
+
+  #imgright {
+    display: none;
+  }
+
 @media only screen and (min-width: 1300px) { /* computer  screen */
   body {
     font-size: 1em;
@@ -144,6 +161,7 @@ input[type=submit] {
 
   #imgleft {
     float: left;
+    display: block;
     width: 25em;
     height: 20em;
     padding: 15px;
@@ -153,6 +171,7 @@ input[type=submit] {
 
   #imgright {
     float: right;
+    display: block;
     width: 25em;
     height: 20em;
     padding: 15px;
