--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ input[type=submit] {
   #imgright {
     display: none;
   }
+}
 
 @media only screen and (min-width: 1300px) { /* computer  screen */
   body {
